--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -9,8 +9,8 @@ layout: compress
   </div>
     {% for post in site.posts  %}
   		<article class="inner" aria-describedby="excerpt-{{ forloop.index }}" aria-labeldby="heading-{{ forloop.index }}"  itemscope itemtype="http://schema.org/BlogPosting" role="article">
-  			<h2 class="article--headline" id="heading-{{ forloop.index }}">
-          <a href="{{ post.url }}" title="Read '{{ post.title }}'" rel="bookmark" itemprop="headline name">{{ post.title }}</a>
+  			<h2 class="article--headline" id="heading-{{ forloop.index }}" itemprop="headline name">
+          <a href="{{ post.url }}" title="Read '{{ post.title }}'" rel="bookmark">{{ post.title }}</a>
         </h2>
         <div class="article__body">
           <p id="excerpt-{{ forloop.index }}">{{ post.excerpt }}</p>
