Remove viewSource Event; Add link to projects & GitHub

--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -54,6 +54,10 @@ layout: compress
 			<p><a href="https://github.com/kevingimbel/viewSwitcher" title="viewSwitcher.js on GitHub">See viewSwitcher.js on GitHub</a></p>
 		</article>
 
+		<article class="inner">
+			<p><a href="/projects" title="See more projects">View more projects</a> or take a look at my <a href="https://github.com/kevingimbel" title="View projects on GitHub">GitHub Profil</a>.</p>
+		</article>
+
 </section>
 
 <section class="c-stage c-stage--photos" id="photography">
